# xfce4-audio-port-switch-plugin

./: .gitignore  CMakeLists.txt  aps_dialog.c  aps_dialog.h  aps_drawing.c  aps_drawing.h  aps_plugin.c  aps_plugin.h  cairo.c  cairo.h  control  make.sh  makedeb.sh  sample.c  sample.desktop  sample.h  sample_dialog.c  sample_dialog.h
